--- a/www/src/layouts/components/Head.astro
+++ b/www/src/layouts/components/Head.astro
@@ -1,5 +1,5 @@
 ---
-import {SEO} from 'astro-seo'
+import {SEO} from 'seo'
 import Font from 'astro-fonts'
 const {meta,styles=[]}=Astro.props
 const stylesheets = [
