--- a/www/src/components/sidebar/NestedList.astro
+++ b/www/src/components/sidebar/NestedList.astro
@@ -1,34 +1,61 @@
 ---
-import PrefetchLink from '../NavBar/PreFetchLink.astro'
+  import NestedGroupBy from '../../scripts/build/groupBy'
+  import PrefetchLink from '../NavBar/PreFetchLink.astro'
 
-  // Magic Recursive Call to the Same Component, 
-const {items,dir,recursive} = Astro.props
+// Magic Recursive Call to the Same Component, 
+const {items,directory:dir,recursive} = Astro.props
 const {RecursiveComponent} = Astro.self
-let filter = [...items.filter(item=>item.name ==='overview'),
-    ...items.filter(item=>item.name !=='overview')
-    .sort((a, b)=> a?.meta?.page?.number || a.name < b?.meta?.page?.number || b.name)]
-console.log(items)
+
+let groupedList = Object.entries(NestedGroupBy(items, x => x.directory))
+let filterBasedOnPage = [...groupedList.filter(x=>x[0].includes(dir)),...groupedList.filter(x=>!(x[0].includes(dir)))]
+
+
 ---
-<h3>{recursive??'Recusive call'}</h3>
-<h2>{dir ? dir.at(-1) : Astro.props.directory}</h2>
-<ul class="sidebar__parent">
-  {
-    filter.map(
-      item => (
-        <li class="sidebar_items">
-          {
-            item.href
-              ? <PrefetchLink class={`sidebar_link ${Astro.request.url.pathname.match(item.href) ? 'sidebar_active' : ''}`} href={item.href}>{item?.meta?.title?.api || item?.meta?.title?.page || item.name}</PrefetchLink>
-            : 
-            item.items && (
-              <Astro.self items={item.items} dir={item.directory} recursive/>
-            )
-          }
-        </li>
-      )
-    )
+{
+  filterBasedOnPage.map(([directory,list])=>(
+    <section>
+      <h3>
+        {directory}
+      </h3>
+      <ul>
+            {
+              list.map((item)=>(
+                <li class="sidebar_items">
+                  {
+                    item.href
+                      ? <PrefetchLink class={`sidebar_link ${Astro.request.url.pathname.match(item.href) ? 'sidebar_active' : ''}`} href={item.href}>{item?.meta?.title?.api || item?.meta?.title?.page || item.file}</PrefetchLink>
+                    : 
+                    item.items && (
+                      <Astro.self items={item.items} dir={item.directory} recursive/>
+                    )
+                  }
+                </li>
+              ))
+            }
+          </ul>
+    </section>
+    ))
+}
+
+<style lang="scss" global>
+.sidebar{
+    &_items{
+    text-transform: capitalize;
+    }
+    &_link{
+        margin-inline-start: 1rem;
+        &:hover{
+          font-weight: 900;
+        }
+        &_active{
+          font-weight: 900;
+        }
+      }
   }
-</ul>
+</style>
+
+
+
 <style lang="scss" global>
 .sidebar{
     &_items{
