--- a/www/src/components/sidebar/Sidebar.astro
+++ b/www/src/components/sidebar/Sidebar.astro
@@ -1,7 +1,70 @@
 ---
+import {Sprite} from 'astro-icon'
 import NestedList from './NestedList.astro'
+import XElement from 'astro-xelement'
 
+const {Input}= XElement
 ---
-<nav>
-  <NestedList items={Astro.props.menu} directory={Astro.props.directory}/>
-</nav>
+
+  <Input type="checkbox" id="sidebar_brgr"/>
+  <label for="sidebar_brgr" name="sidebar_brgr">
+    <Sprite name="ph:list-bullets-bold" id="brgr_open"/>
+    <Sprite name="ph:x-bold" id="brgr_closed"/>
+  </label>
+  <div >
+    <nav class="sidebar-nav">
+      <NestedList items={Astro.props.menu} directory={Astro.props.directory}/>
+    </nav>
+  </div>
+
+<style lang="scss">
+  [astro-icon]{
+    width: 2rem;
+  }
+  .brgr_menu{
+    position: relative;
+    z-index: 1;
+  }
+  .sidebar-nav{
+    background-color: aqua;
+    transition: all 0.4s ease-in;
+    // position: relative;
+  }
+  label{
+    color: blue;
+    float: right;
+  }
+  input[type=checkbox] {
+   display: block;
+   position: absolute;
+   left:-100px;
+   transition: opacity 1s ease-in;
+    &:checked + label {
+      #brgr_open{
+        opacity: 0;
+        display: none;
+      }
+      #brgr_closed{
+        opacity: 1;
+        display: block;
+      }
+      .sidebar-nav{
+        transform: translateX(0);
+      }
+    }
+    &:not(:checked) + label {
+      #brgr_open{
+        opacity: 1;
+        display: block;
+      }
+      #brgr_closed{
+        opacity: 0;
+        display: none;
+      }
+      .sidebar-nav{
+        transform: translateX(-250px);
+      }
+    }
+  }
+
+</style>
